# cardano-canonical-ledger

./: .gitignore  Contributing.md  README.md  cabal.project  flake.nix  fourmolu.yaml  security.md
.github/workflows/: haskell-ci.yml  nix.yaml
docs/: README.md  Weekly updates.md  implementation-choices.md  ledger-state-structure.md
mempack-scls/: CHANGELOG.md  mempack-scls.cabal
mempack-scls/mempack-1.0/Data/MemPack/: Extra.hs
mempack-scls/mempack-2.0/Data/MemPack/: Extra.hs
merkle-root-demo/: README.md  merkle-tree-demo.cabal
merkle-root-demo/src/: Constructor.hs  Entry.hs  MerkleTree.hs
merkle-root-demo/test/: Spec.hs
merkle-tree-incremental/: README.md  merkle-tree-incremental.cabal
merkle-tree-incremental/src/Crypto/Hash/: MerkleTreeIncremental.hs
merkle-tree-incremental/src/Crypto/Hash/MerkleTree/: Incremental.hs
merkle-tree-incremental/src/Crypto/Hash/MerkleTree/Incremental/: MerkleTreeState.hs
merkle-tree-incremental/src/Crypto/Hash/MerkleTreeIncremental/: Constructor.hs  MerkleState.hs  MerkleTreeState.hs
merkle-tree-incremental/test/: Reference.hs  Spec.hs
nix/: hix.nix  project.nix  treefmt.nix
scls-cardano/: CHANGELOG.md  scls-cardano.cabal
scls-cardano/cddl-src/Cardano/SCLS/: CDDL.hs  Common.hs
scls-cardano/cddl-src/Cardano/SCLS/Namespace/: GovCommittee.hs  GovConstitution.hs  GovPParams.hs  GovProposals.hs  Nonces.hs  Snapshots.hs  UTxO.hs
scls-cardano/cddl-validate/Cardano/SCLS/CDDL/: Validate.hs
scls-cardano/gen-cddl/: Main.hs
scls-cardano/testlib/Cardano/SCLS/: Testlib.hs
scls-cbor/: CHANGELOG.md  scls-cbor.cabal
scls-cbor/src/Cardano/SCLS/CBOR/: Canonical.hs
scls-cbor/src/Cardano/SCLS/CBOR/Canonical/: Decoder.hs  Encoder.hs  NamespacedEncoder.hs
scls-cbor/test/: CanonicalSpec.hs  Main.hs  NamespacedEncodingSpec.hs  TestEntry.hs
scls-cddl/: CHANGELOG.md  scls-cddl.cabal
scls-cddl/cddl-src/Cardano/SCLS/: CDDL.hs  Common.hs
scls-cddl/cddl-src/Cardano/SCLS/Namespace/: Blocks.hs  GovCommitee.hs  GovCommittee.hs  GovConstitution.hs  GovPParams.hs  GovProposals.hs  PoolStake.hs  Pots.hs  Snapshots.hs  UTxO.hs
scls-cddl/gen-cddl/: Main.hs
scls-cddl/test/: Main.hs
scls-core/: CHANGELOG.md  scls-core.cabal
scls-core/src/Cardano/SCLS/: Epoch.hs  NamespaceCodec.hs  NamespaceKey.hs  Versioned.hs
scls-core/src/Cardano/SCLS/CBOR/: Canonical.hs
scls-core/src/Cardano/SCLS/Entry/: IsKey.hs
scls-format/: CHANGELOG.md  scls-format.cabal
scls-format/examples/: README.md
scls-format/examples/extract-by-ns/: Main.hs  Readme.md
scls-format/examples/read-file/: Main.hs  README.md
scls-format/examples/write-file/: Main.hs  README.md
scls-format/mempack-1.0/Data/MemPack/: ByteOrdered.hs  Extra.hs  IsKey.hs
scls-format/mempack-2.0/Data/MemPack/: ByteOrdered.hs  Extra.hs  IsKey.hs
scls-format/src/Cardano/SCLS/: Query.hs
scls-format/src/Cardano/SCLS/Internal/: Entry.hs  Frame.hs  Hash.hs  Namespace.hs  NamespaceCodec.hs  Reader.hs  Version.hs
scls-format/src/Cardano/SCLS/Internal/Block/: Chunk.hs  Hdr.hs  Manifest.hs
scls-format/src/Cardano/SCLS/Internal/Block/Internal/: Class.hs
scls-format/src/Cardano/SCLS/Internal/Entry/: CBOREntry.hs  ChunkEntry.hs  IsKey.hs
scls-format/src/Cardano/SCLS/Internal/Record/: Chunk.hs  Hdr.hs  Manifest.hs  Metadata.hs
scls-format/src/Cardano/SCLS/Internal/Record/Internal/: Class.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/: Dump.hs  HasKey.hs  MemPack.hs  Reference.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/Builder/: InMemory.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/ChunksBuilder/: InMemory.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/Dump/: Plan.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/MetadataBuilder/: InMemory.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/Reference/: Dump.hs  Impl.hs
scls-format/src/Cardano/Types/: ByteOrdered.hs  Namespace.hs  Network.hs  SlotNo.hs
scls-format/test/: ChunksBuilderSpec.hs  Main.hs  MetadataBuilderSpec.hs  MultiNamespace.hs  NamespacedEncodingSpec.hs  QuerySpec.hs  Roundtrip.hs  TestEntry.hs
scls-format/testlib/Cardano/SCLS/: Testlib.hs
scls-merkle-tree/: README.md  scls-merkle-tree.cabal
scls-merkle-tree/src/Cardano/SCLS/: MerkleTree.hs
scls-merkle-tree/src/Cardano/SCLS/MerkleTree/: Constructor.hs
scls-merkle-tree/test/: Spec.hs
scls-util/: scls-util.cabal
scls-util/app/: Main.hs
scls-util/src/Cardano/SCLS/Util/: Check.hs  Debug.hs  Info.hs  Result.hs  Tool.hs  Verify.hs
scls-util/test/: CheckSpec.hs  Common.hs  InfoSpec.hs  Main.hs  MergeSpec.hs  SplitSpec.hs  VerifySpec.hs
