cabal-version: 3.14
name: scls-cbor
version: 0.1.0.0
synopsis: CBOR utilities for the Cardano Canonical Ledger State
-- description:
homepage: https://github.com/tweag/cardano-canonical-ledger
license: Apache-2.0
license-file: LICENSE
author: Tweag IO Team
maintainer: cardano-scls@tweag.io
-- copyright:
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Cardano.SCLS.CBOR.Canonical.Decoder
    Cardano.SCLS.CBOR.Canonical.Encoder
    Cardano.SCLS.CBOR.Canonical.NamespacedEncoder

  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.18,
    bytestring,
    cborg,
    containers,
    scls-format,
    text

  hs-source-dirs: src
  default-language: GHC2021

test-suite scls-cbor-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    NamespacedEncodingSpec
    TestEntry

  build-depends:
    base >=4.18,
    bytestring,
    cborg,
    hspec,
    random,
    scls-cbor,
    scls-format,
