cabal-version:      3.4
name:               scls-format
version:            0.1.0.0
synopsis:           A library for realing and serializing SCLS files
description:        This is a reference implementation of library for reading and writing SCLS files.
                    See CIP for the format: link
license:            Apache-2.0
license-file:       LICENSE
author:             Tweag IO Team <cardano-cls@tweag.io>
copyright:          2025 (c) Modus Create, Inc.
maintainer:         cardano-cls@tweag.io
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with: GHC ==9.12.1 || ==9.10.2 || ==9.8.4
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Cardano.SCLS.Internal.Frame
      Cardano.SCLS.Internal.Version

      Cardano.SCLS.Internal.Record.Internal.Class
      Cardano.SCLS.Internal.Record.Hdr
      Cardano.SCLS.Internal.Record.Chunk
      Cardano.SCLS.Internal.Record.Manifest

      Cardano.Types.Network
      Cardano.Types.SlotNo
    -- other-modules:
    other-extensions:
      AllowAmbiguousTypes
      DataKinds
      FunctionalDependencies
      LambdaCase
      OverloadedStrings
      RecordWildCards
      ViewPatterns
    default-extensions:
      DerivingStrategies
      StrictData
    build-depends:
      base >=4.18 && <5,
      mempack >=0.1,
      binary >= 0.8,
      bytestring >= 0.12,
      base16-bytestring >= 1.0,
      containers >=0.6,
      text >= 2.1


    hs-source-dirs:   src
    default-language: GHC2021

executable example-read-file
  import: warnings
  default-language: GHC2021
  hs-source-dirs:   examples/read-file
  main-is:          Main.hs
  build-depends:
    base >=4.18 && <4.22,
    scls-format

executable example-write-file
   import: warnings
   default-language: GHC2021
   hs-source-dirs:   examples/write-file
   main-is:          Main.hs
   build-depends:
    base >=4.18 && <5,
    scls-format,
    bytestring >= 0.12,
    containers >=0.6,
    text >= 2.1

executable example-extract-by-ns
  import: warnings
  default-language: GHC2021
  hs-source-dirs:   examples/extract-by-ns
  main-is:          Main.hs
  build-depends:
    base,
    scls-format,
    bytestring >= 0.12,
    text >= 2.1,

test-suite scls-format-test
  import:           warnings
  default-language: GHC2021
  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    base >=4.18 && <5,
    scls-format
