cabal-version: 3.4
name: scls-format
version: 0.1.0.0
synopsis: A library for realing and serializing SCLS files
description:
  This is a reference implementation of library for reading and writing SCLS files.
  See CIP for the format: link

license: Apache-2.0
license-file: LICENSE
author: Tweag IO Team <cardano-cls@tweag.io>
copyright: 2025 (c) Modus Create, Inc.
category: Codec
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Cardano.SCLS.Internal.Entry
    Cardano.SCLS.Internal.Frame
    Cardano.SCLS.Internal.Hash
    Cardano.SCLS.Internal.Reader
    Cardano.SCLS.Internal.Record.Chunk
    Cardano.SCLS.Internal.Record.Hdr
    Cardano.SCLS.Internal.Record.Internal.Class
    Cardano.SCLS.Internal.Record.Manifest
    Cardano.SCLS.Internal.Record.Metadata
    Cardano.SCLS.Internal.Serializer.ChunksBuilder.InMemory
    Cardano.SCLS.Internal.Serializer.External.Impl
    Cardano.SCLS.Internal.Serializer.MemPack
    Cardano.SCLS.Internal.Serializer.Reference.Dump
    Cardano.SCLS.Internal.Serializer.Reference.Impl
    Cardano.SCLS.Internal.Version
    Cardano.Types.ByteOrdered
    Cardano.Types.Network
    Cardano.Types.SlotNo

  -- other-modules:
  other-extensions:
    AllowAmbiguousTypes
    DataKinds
    FunctionalDependencies
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ViewPatterns

  default-extensions:
    DerivingStrategies
    StrictData

  build-depends:
    FailT,
    base >=4.18 && <5,
    base16-bytestring,
    binary,
    byte-order >=0.1.3.1,
    bytestring,
    containers,
    crypton,
    directory,
    filepath,
    memory,
    mempack <0.2,
    merkle-tree-incremental,
    mtl,
    pqueue,
    primitive,
    streaming,
    temporary,
    text,
    vector,
    vector-algorithms,
    vector-builder,

  hs-source-dirs: src
  default-language: GHC2021

executable example-read-file
  import: warnings
  hs-source-dirs: examples/read-file
  main-is: Main.hs
  build-depends:
    base,
    scls-format,

executable example-extract-by-ns
  import: warnings
  hs-source-dirs: examples/extract-by-ns
  main-is: Main.hs
  build-depends:
    base,
    bytestring,
    scls-format,
    text,

test-suite scls-format-test
  import: warnings
  default-language: GHC2021
  other-modules:
    ChunksBuilderSpec
    MultiNamespace
    Roundtrip

  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    HUnit,
    QuickCheck,
    base >=4.18 && <5,
    bytestring,
    cborg >=0.2,
    containers,
    cuddle >=0.5,
    filepath,
    hspec,
    hspec-expectations,
    mempack,
    merkle-tree-incremental,
    primitive,
    random >=1.2,
    scls-cddl,
    scls-format,
    streaming >=0.2.4.0,
    temporary,
    text >=2.0,
